# ipaddr_get

./: CMakeLists.txt  LICENSE  README.txt  getip.cpp  getip.hpp  main.cpp
